steve.output
Nonterminals useless in grammar

   foo


Rules useless in grammar

    7 foo: OPEN_OBJECT


Grammar

    0 $accept: objects $end

    1 objects: /* empty */
    2        | objects object

    3 object: others
    4       | handle_o

    5 handle_o: OPEN_OBJECT CLOSE_OBJECT

    6 others: EXEC_OBJECT ASSIGN STRING IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
OPEN_OBJECT (258) 5
CLOSE_OBJECT (259) 5
EXEC_OBJECT (260) 6
ASSIGN (261) 6
STRING (262) 6
IDENTIFIER (263) 6


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
objects (10)
    on left: 1 2, on right: 0 2
object (11)
    on left: 3 4, on right: 2
handle_o (12)
    on left: 5, on right: 4
others (13)
    on left: 6, on right: 3


state 0

    0 $accept: . objects $end

    $default  reduce using rule 1 (objects)

    objects  go to state 1


state 1

    0 $accept: objects . $end
    2 objects: objects . object

    $end         shift, and go to state 2
    OPEN_OBJECT  shift, and go to state 3
    EXEC_OBJECT  shift, and go to state 4

    object    go to state 5
    handle_o  go to state 6
    others    go to state 7


state 2

    0 $accept: objects $end .

    $default  accept


state 3

    5 handle_o: OPEN_OBJECT . CLOSE_OBJECT

    CLOSE_OBJECT  shift, and go to state 8


state 4

    6 others: EXEC_OBJECT . ASSIGN STRING IDENTIFIER

    ASSIGN  shift, and go to state 9


state 5

    2 objects: objects object .

    $default  reduce using rule 2 (objects)


state 6

    4 object: handle_o .

    $default  reduce using rule 4 (object)


state 7

    3 object: others .

    $default  reduce using rule 3 (object)


state 8

    5 handle_o: OPEN_OBJECT CLOSE_OBJECT .

    $default  reduce using rule 5 (handle_o)


state 9

    6 others: EXEC_OBJECT ASSIGN . STRING IDENTIFIER

    STRING  shift, and go to state 10


state 10

    6 others: EXEC_OBJECT ASSIGN STRING . IDENTIFIER

    IDENTIFIER  shift, and go to state 11


state 11

    6 others: EXEC_OBJECT ASSIGN STRING IDENTIFIER .

    $default  reduce using rule 6 (others)
